--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=SpringBootTiendaWebCPE
 # Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/tienda?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/tienda_cpe?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
