--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,21 @@
 			<artifactId>webjars-locator-core</artifactId>
 		</dependency>
 
+
+		<!-- jQuery-UI (JavaScript library) -->
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>jquery-ui</artifactId>
+			<version>1.14.1</version>
+		</dependency>
+
+		<!-- bs-custom-file-input (JavaScript library) -->
+		<dependency>
+			<groupId>org.webjars.npm</groupId>
+			<artifactId>bs-custom-file-input</artifactId>
+			<version>1.3.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
