--- a/pom.xml
+++ b/pom.xml
@@ -72,43 +72,48 @@
 		<!-- webjars -->
 
 		<!-- WebJars Locator Core -->
+		<!-- WebJars Locator (required for version-less URLs) -->
 		<dependency>
 			<groupId>org.webjars</groupId>
-			<artifactId>webjars-locator-core</artifactId>
+			<artifactId>webjars-locator</artifactId>
+			<version>0.52</version>
 		</dependency>
 
 		<!-- Bootstrap (CSS framework) -->
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>bootstrap</artifactId>
-			<version>4.5.0</version>
+			<version>5.3.5</version>
 		</dependency>
-
 
 		<!-- jQuery (JavaScript library) -->
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>jquery</artifactId>
-			<version>3.5.1</version>
+			<version>3.7.1</version>
 		</dependency>
-
 
 		<!-- Font Awesome (Icons) -->
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>font-awesome</artifactId>
-			<version>5.14.0</version>
+			<version>6.7.2</version>
 		</dependency>
 
-
-
+		<!-- Chart.js (Data visualization) -->
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>chartjs</artifactId>
+			<version>4.4.3</version>
+		</dependency>
 
 		<!-- Popper.js (required for Bootstrap tooltips) -->
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>popper.js</artifactId>
-			<version>2.0.2</version>
+			<version>2.11.7</version>
 		</dependency>
+
 
 
 
@@ -117,7 +122,7 @@
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>jquery-ui</artifactId>
-			<version>1.12.1</version>
+			<version>1.14.1</version>
 		</dependency>
 
 		<!-- bs-custom-file-input (JavaScript library) -->
