--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.application.name=SpringBootTiendaWebCPE
 spring.datasource.url=jdbc:mysql://localhost:3306/tienda_cpe?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+
+spring.security.user.name=admin
+spring.security.user.password=123456
